apps/base/paperless-ngx/paperless-ngx-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx-ingressroute
  annotations:
    gethomepage.dev/href: "https://paperless.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless NGX"
    gethomepage.dev/description: "Document management and OCR system"
    gethomepage.dev/app: paperless-ngx
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/paperless-ngx.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`paperless.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: paperless-ngx-app
          port: 8000
